--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body id="body">
     <header class="headerGrid">
-        <img src="images/profilePicture.jpg" class="augustPicture" Alt="August Pelissero's Picture" width="200">
+        <img src="images/profilePicture.jpg" class="augustPicture" Alt="August Pelissero's Picture" width="200" loading="lazy">
         <h1 class="name">August J. Pelissero</h1>
     </header>
 
@@ -37,7 +37,7 @@
                 <li>Lesson 9 (Part 2): <a href="chamber/directory.html">Chamber Directory Page</a></li>
                 <li>Lesson 10 (Part 1): <a href="weatherAPI/weatherAPI.html">Weather API Practice</a></li>
                 <li>Lesson 10 (Part 2): <a href="chamber/index.html">Chamber Weather API</a></li>
-                <li>Lesson 11: <a href="">Title</a></li>
+                <li>Lesson 11: <a href="chamber/index.html">Completed Chamber Project</a></li>
             </ul>
         </div>
     </main>
