--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -15,49 +15,48 @@
     <link href="https://fonts.googleapis.com/css2?family=Alegreya:wght@500&family=Oswald:wght@300&family=Roboto&display=swap" rel="stylesheet">
 </head>
 
-<header>
-    <picture class="saguaroLogo">
-        <source media="(max-width:500px)" srcset="images/saguaroLogoSmall.webp">
-        <source media="(max-width:700px)" srcset="images/saguaroLogoMedium.webp">
-        <source media="(max-width:1600px)" srcset="images/saguaroLogoLarge.webp">
-        <img src="images/saguaroChamberLogoWebp.webp" alt="Saguaro Chamber's Logo">
-    </picture>
-    
-    <h1 class="saguaroTitle">Saguaro Chamber</h1>
-    <nav>
-        <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
-        <ul id="primaryNav">
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="discover.html">Discover</a></li>
-            <li><a href="directory.html">Directory</a></li>
-            <li><a href="join.html">Join</a></li> 
-            <li><a href="contactForm.html">Contact</a></li>    
-        </ul>
-    </nav>
-    <div class="fullDate"></div>
-    <a href="https://www.facebook.com/" class="facebook">
-        <figure class="facebook">
-            <img src="images/facebookLogo.png" alt="Facebook Logo"
-            sizes="3vw"
-            srcset="images/facebookLogoSmall.png 200w,
-                    images/facebookLogoMedium.png 500w,
-                    images/facebookLogoLarge.png 800w"
-                    >
-        </figure>
-    </a>
-    <a href="https://twitter.com/?lang=en" class="twitter">
-        <figure class="twitter">
-            <img src="images/twitterLogo.png" alt="Twitter Logo"
-                sizes="3vw"
-                srcset="images/twitterLogoSmall.png 200w,
-                        images/twitterLogoMedium.png 500w,
-                        images/twitterLogoLarge.png 800w"
-                        >
-        </figure>
-    </a>
-</header>
-
 <body>
+    <header>
+        <a href="index.html" class="saguaroLogo">
+            <picture >
+                <source media="(max-width:600px)" srcset="images/saguaroLogoSmall.webp">
+                <source media="(max-width:850px)" srcset="images/saguaroLogoMedium.webp">
+                <source media="(min-width:851px)" srcset="images/saguaroLogoLarge.webp">
+                <img src="images/saguaroChamberLogoWebp.webp" alt="Saguaro Chamber's Logo" loading="lazy">
+            </picture>
+        </a>
+        <h1 class="saguaroTitle">Saguaro Chamber</h1>
+        <nav>
+            <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
+            <ul id="primaryNav">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="discover.html">Discover</a></li>
+                <li><a href="directory.html">Directory</a></li>
+                <li><a href="join.html">Join</a></li> 
+                <li><a href="contactForm.html">Contact</a></li>    
+            </ul>
+        </nav>
+        <div class="fullDate"></div>
+        <a href="https://www.facebook.com/" class="facebook">
+            <figure class="facebook">
+                <img src="images/facebookLogo.jpg" alt="Facebook Logo" sizes="3vw" loading="lazy"
+                srcset="images/facebookLogoSmall.png 150w,
+                        images/facebookLogoMedium.png 450w,
+                        images/facebookLogoLarge.png 750w"
+                        >
+            </figure>
+        </a>
+        <a href="https://twitter.com/?lang=en" class="twitter">
+            <figure class="twitter">
+                <img src="images/twitterLogo.png" alt="Twitter Logo" sizes="3vw" loading="lazy"
+                    srcset="images/twitterLogoSmall.png 150w,
+                            images/twitterLogoMedium.png 450w,
+                            images/twitterLogoLarge.png 750w"
+                            >
+            </figure>
+        </a>
+    </header>
+
     <main class="discoverMain">
         <div class="population">
             <picture class="discoveryImgs">
