Fixed validation errors

--- a/chamber/contactForm.html
+++ b/chamber/contactForm.html
@@ -31,11 +31,11 @@
         <nav>
             <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
-                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li> 
-                <li><a href="contactForm.html">Contact</a></li>    
+                <li class="active"><a href="contactForm.html">Contact</a></li>    
             </ul>
         </nav>
         <div class="fullDate"></div>
@@ -84,8 +84,8 @@
                 <label class="membership"><input type="radio" name="member" value="yes" required> Yes</label>
                 <label class="membership"><input type="radio" name="member" value="no" required> No</label>
                 <label class="membership"><input type="radio" name="member" value="notSure" required> Not Sure</label>
-                <p>Business Description</p>
-                <label class="busiDescription"><textarea name="businessDescr"></textarea></label>
+                <p>Business Description*</p>
+                <label class="busiDescription"><textarea name="businessDescr" required></textarea></label>
             </fieldset>
 
             <input type="submit" value="Get In Contact" class="submitBtn">
