--- a/chamber/index.html
+++ b/chamber/index.html
@@ -78,7 +78,7 @@
         </div>
         <div class="weather">
             <h2 id="weatherTitle"><b>Weather</b></h2>
-            <img src="" alt="" id="weatherIcon" loading="lazy">
+            <img src="images/placeholder2.png" alt="Weather Icon" id="weatherIcon" loading="lazy">
             <p id="temp"></p>
             <p id="weatherType"></p>
             <p id="windSpeed"></p>
@@ -90,10 +90,7 @@
             <p class="newsText"><br> Recently, a new business has popped up! Currently being built on 9728 Meadowbrook Ave., Shack Craft is one of the newest businesses to join our chamber. This store is planned to carry and supply all the crafting supllies you need.</p>
         </div>
         <div class="join">
-            
-            <a href="join.html" class="joinHeader">
-                <button>Join</button>
-            </a>
+            <button></button><a href="join.html" class="joinHeader"></a></button>
             <p>Learn how to join the chamber! Help expand your business today!</p>
         </div>
         <div class="spotlight">
@@ -101,19 +98,21 @@
     </main>
 </body>
 
-<footer id="footer">
-    <picture class="saguaroLogoFooter">
-        <source media="(max-width:500px)" srcset="images/logoFooterSmall.webp">
-        <source media="(max-width:800px)" srcset="images/logoFooterMedium.webp">
-        <source media="(max-width:1600px)" srcset="images/logoFooterLarge.webp">
-        <img src="images/saguaroChamberLogoWebp.webp" alt="Saguaro Chamber's Logo" loading="lazy">
-    </picture>
+<footer>
+    <a href="index.html" class="saguaroLogo">
+        <picture class="saguaroLogoFooter">
+            <source media="(max-width:500px)" srcset="images/logoFooterSmall.webp">
+            <source media="(max-width:800px)" srcset="images/logoFooterMedium.webp">
+            <source media="(max-width:1600px)" srcset="images/logoFooterLarge.webp">
+            <img src="images/saguaroChamberLogoWebp.webp" alt="Saguaro Chamber's Logo" loading="lazy">
+        </picture>
+    </a>
     <p class="nameFooter">Saguaro Chamber</p>
     <p class="addressFooter">13220 Cactus Rd, <br>Phenoix, AZ, 85003</p>
     <p class="emailFooter">saguaro@gmail.com</p>
     <p class="phoneFooter">(480) 867-5309</p>
     <a href="https://goo.gl/maps/CLtA9cxRRksRAqpJA" class="locationFooter">Location Map</a>
-    <p class="creatorInfo">@ <const id="year"></const> | August Pelissero | WDD230 Project | Buckeye, AZ | Last Updated: <const id="lastUpdate"></const></p>
+    <p class="creatorInfo">@ <span id="year"></span> | August Pelissero | WDD230 Project | Buckeye, AZ | Last Updated: <span id="lastUpdate"></span></p>
 </footer>
 <script src="scripts/getDate.js"></script>
 <script src="scripts/hamburgerButton.js"></script>
