--- a/chamber/index.html
+++ b/chamber/index.html
@@ -90,7 +90,8 @@
             <p class="newsText"><br> Recently, a new business has popped up! Currently being built on 9728 Meadowbrook Ave., Shack Craft is one of the newest businesses to join our chamber. This store is planned to carry and supply all the crafting supllies you need.</p>
         </div>
         <div class="join">
-            <button></button><a href="join.html" class="joinHeader"></a></button>
+            <p class="joinSpacing"></p>
+            <a href="join.html" class="joinHeader">Join</a>
             <p>Learn how to join the chamber! Help expand your business today!</p>
         </div>
         <div class="spotlight">
