Fixed head information

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="August Pelissero" content="My project portal for WWD230: Web Development I.">
-    <title>August Pelissero's Assignment Portal</title>
+    <meta name="Index Page" content="The home page for Saguaro Chamber">
+    <title>Saguaro Chamber: Home Page</title>
     <link rel = "pageIcon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
