--- a/chamber/thankYou.html
+++ b/chamber/thankYou.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="August Pelissero" content="My project portal for WWD230: Web Development I.">
-    <title>August Pelissero's Assignment Portal</title>
+    <meta name="Join Thank You Page" content="The thank you page after you submit a join request for Saguaro Chamber">
+    <title>Saguaro Chamber: Join Thank You Page</title>
     <link rel = "pageIcon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
