--- a/chamber/contactForm.html
+++ b/chamber/contactForm.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="August Pelissero" content="My project portal for WWD230: Web Development I.">
-    <title>August Pelissero's Assignment Portal</title>
+    <meta name="Contact Page" content="Contact page for Saguaro Chamber">
+    <title>Saguaro Chamber: Contact Page</title>
     <link rel = "pageIcon" href="favicon.ico">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
