--- a/bountifulFoods/aboutUsThankYou.html
+++ b/bountifulFoods/aboutUsThankYou.html
@@ -33,6 +33,8 @@
     </header>
 
     <main class="aboutMain">
+        <h1 class="thankYou">Thank you for contacting us!</h1>
+
         <h2 class="contactHeader">Get In Touch</h2>
         <p class="contactAddress">Address:<br>3481 Camden Street,<br>Carlsbad, CA</p>
         <p class="contactEmail">Email:<br>bountifulfoods@gmail.com</p>
@@ -42,24 +44,7 @@
         <p class="historicalInfo">Text of Historical Info</p>
 
         <h2 class="locationHeader">Where We're Located</h2>
-        <iframe class="googleMap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3464.711451463595!2d-117.29455870770987!3d33.112740598906434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc73453f3bee59%3A0xa4cb5592fcf65d2f!2sCarlsbad%2C%20CA!5e0!3m2!1sen!2sus!4v1670018771711!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-        <h2 class="formHeader">Contact Us</h2>
-
-        <form class="contactForm" method="get" action="aboutUsThankYou.html">
-            <fieldset>
-                <p>First Name <span class="redColor">*</span></p>
-                <label class="inputArea"><input type="text" name="fname" placeholder="" required></label>
-                <p>Last Name <span class="redColor">*</span></p>
-                <label class="inputArea"><input type="text" name="lname" placeholder="" required></label>
-                <p>Email <span class="redColor">*</span></p>
-                <label class="inputArea"><input type="email" name="email" placeholder="someone@gmail.com" required></label>
-                <p>How Can We Help You? <span class="redColor">*</span></p>
-                <label class="helpBox"><textarea name="questions" required></textarea></label>
-            </fieldset>
-            <input type="submit" value="Get In Contact" class="submitBtn">
-        </form> 
-        
+        <iframe class="googleMap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3464.711451463595!2d-117.29455870770987!3d33.112740598906434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc73453f3bee59%3A0xa4cb5592fcf65d2f!2sCarlsbad%2C%20CA!5e0!3m2!1sen!2sus!4v1670018771711!5m2!1sen!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        
     </main>
 
     <footer>
