--- a/bountifulFoods/index.html
+++ b/bountifulFoods/index.html
@@ -14,10 +14,9 @@
 <body>
     <header>
         <picture class="businessLogo">
-            <source>
-            <source>
-            <source>
-            <img src="" alt="company logo">
+            <source media="(max-width: 500px)" srcset="images/bountifulFoodsLogoSmall.png">
+            <source media="(max-width: 900px)" srcset="images/bountifulFoodsLogoMedium.png">
+            <img src="images/bountifulFoodsLogoLarge.png" alt="Bountiful Foods logo.">
         </picture>
 
         <h1 class="companyName">Bountiful Foods</h1>
@@ -30,7 +29,6 @@
                 <li><a href="aboutUs.html">About Us</a></li>
             </ul>
         </nav>
-
     </header>
 
     <main class="indexMain">
@@ -47,23 +45,34 @@
         <div class="costalInformation">
             <div class="sanDiego">
                 <picture>
-                    <source>
-                    <source>
-                    <source>
-                    <img src="" alt="Coastal Place 1">
+                    <source media="(max-width: 500px)" srcset="images/sanDiegoSmall.png">
+                    <source media="(max-width: 900px)" srcset="images/sanDiegoMedium.png">
+                    <img src="images/sanDiegoLarge.png" alt="San Diego City" class="costalCities">
                 </picture>
                 <h2>San Diego</h2>
-                <p>Summary 1</p>
+                <p>San Diego is California’s second largest city, supporting 1.3 million people in the city. 
+                It’s known for its expansive beaches, outdoor opportunities, ideal climate, and family place activities.
+                <br>
+                <br>The farming culture is big, as many are growing flowers, fruit, and other kinds of produce. Many of 
+                the organic farms from San Diego support us with their fruit. We often rely upon them for oranges, lemons, 
+                and limes.
+                </p>
             </div>
             <div class="losAngeles">
                 <picture>
-                    <source>
-                    <source>
-                    <source>
-                    <img src="" alt="Coastal Place 1">
+                    <source media="(max-width: 500px)" srcset="images/losAngelesSmall.png">
+                    <source media="(max-width: 900px)" srcset="images/losAngelesMedium.png">
+                    <img src="images/losAngelesLarge.png" alt="Los Angeles at Sunset" class="costalCities">
                 </picture>
                 <h2>Los Angeles</h2>
-                <p>Summary 2</p>
+                <p>Los Angeles is the biggest city in California with a population of 3.9 million. It is the state’s cultural, 
+                financial, and commercial center. The movie industry is prevalent here, as Hollywood’s beginnings started in 
+                here.
+                <br>
+                <br>Included in Los Angeles’s commercial industry is farming. Even though many of the farms are commercial, there 
+                are still some small organic farms on the city’s edge. They support Bountiful Foods with dragon fruit, apples, 
+                and peaches.
+                </p>
             </div>
         </div>
 
@@ -81,7 +90,7 @@
     </main>
 
     <footer>
-        <p class="followUs">Follow Us Here</p>
+        <p class="followUs">Follow Us Here:</p>
         <a href="https://www.facebook.com/" class="facebook">
             <picture>
                 <source media="(max-width: 600px)" srcset="images/facebookLogoSmall.png">
@@ -103,6 +112,10 @@
                 <img src="images/pinterestLogoLarge.png" alt="Pinterest Logo">
             </picture>
         </a>
+        <p class="contactUs">Contact Us Here:</p>
+        <p class="address">3481 Camden Street,<br>Carlsbad, CA</p>
+        <p class="email">Email:<br>bountifulfoods@gmail.com</p>
+        <p class="phoneNum">Phone Number:<br>(480) 387-2466</p>
         <p class="lastUpdate">Last Updated: <span id="lastUpdated"></span></p>
     </footer>
     <script src="javascript/hamburgerButton.js"></script>
