Added the Weather JSON to Home page

--- a/bountifulFoods/aboutUsThankYou.html
+++ b/bountifulFoods/aboutUsThankYou.html
@@ -73,5 +73,6 @@
         <p class="lastUpdate">Last Updated: <span id="lastUpdated"></span></p>
     </footer>
     <script src="javascript/hamburgerButton.js"></script>
+    <script src="javascript/lastUpdated.js"></script>
 </body>
 </html>
