Added fruit checkboxses into Fresh

--- a/bountifulFoods/fresh.html
+++ b/bountifulFoods/fresh.html
@@ -43,13 +43,14 @@
             </fieldset>
             <fieldset class="fruitSelect">
                 <p>Choose Three Fruits <span class="redColor">*</span></p>
+                
             </fieldset>
             <fieldset class="instructions">
                 <p>Extra Instructions <span class="redColor">*</span></p>
                 <label class=""><textarea name="extraInfo"></textarea></label>
             </fieldset>
         </form>
-
+        <input type="submit" value="Get Drink" class="fruitBtn">
         <p>Output</p>
     </main>
 
@@ -84,5 +85,6 @@
     </footer>
     <script src="javascript/hamburgerButton.js"></script>
     <script src="javascript/lastUpdated.js"></script>
+    <script src="javascript/fruit.js"></script>
 </body>
 </html>
