Added temporary link to Final Project

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li>Lesson 10 (Part 1): <a href="weatherAPI/weatherAPI.html">Weather API Practice</a></li>
                 <li>Lesson 10 (Part 2): <a href="chamber/index.html">Chamber Weather API</a></li>
                 <li>Lesson 11: <a href="chamber/index.html">Completed Chamber Project</a></li>
+                <a href="bountifulFoods/index.html">bountifulFoods</a>
             </ul>
         </div>
     </main>
