Fixed fruits.json display

--- a/bountifulFoods/fresh.html
+++ b/bountifulFoods/fresh.html
@@ -43,7 +43,12 @@
             </fieldset>
             <fieldset class="fruitSelect">
                 <p>Choose Three Fruits <span class="redColor">*</span></p>
-                
+                <p>First Fruit:</p>
+                <select name="firstFruit" id="fruitchoice1"></select>
+                <p>Second Fruit:</p>
+                <select name="secondFruit" id="fruitchoice2"></select>
+                <p>Third Fruit:</p>
+                <select name="thirdFruit" id="fruitchoice3"></select>
             </fieldset>
             <fieldset class="instructions">
                 <p>Extra Instructions <span class="redColor">*</span></p>
