--- a/bountifulFoods/index.html
+++ b/bountifulFoods/index.html
@@ -78,7 +78,7 @@
 
         <div class="weatherCard">
             <h2>Weather</h2>
-            <img src="" id="weatherImg" loading="lazy">
+            <img src="images/placeholder2Medium.jpg" id="weatherImg" loading="lazy" alt="Weather Type Image">
             <p id="temp">Temperature</p>
             <p id="weatherType">Weather Condition</p>
             <p id="humidity">Humidity</p>
